--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/tahiry
+spring.datasource.url=jdbc:postgresql://postgres:QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU@postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=safidy
+spring.datasource.password=QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU
 spring.datasource.dbcp2.max-wait-millis=30000
 spring.datasource.dbcp2.validation-query=select 1
 spring.datasource.dbcp2.validation-query-timeout=30
