--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU@postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://postgres:QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU@roundhouse.proxy.rlwy.net:37130/railway
 spring.datasource.username=postgres
 spring.datasource.password=QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU
 spring.datasource.dbcp2.max-wait-millis=30000
