--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://fdb1033.atspace.me:3306/4087159_db
-spring.datasource.username=4087159_db
-spring.datasource.password=xUN0(Am(3gKRV.Ef
+spring.datasource.url=jdbc:postgresql://localhost:5432/tahiry
+spring.datasource.username=postgres
+spring.datasource.password=safidy
 spring.datasource.dbcp2.max-wait-millis=30000
 spring.datasource.dbcp2.validation-query=select 1
 spring.datasource.dbcp2.validation-query-timeout=30
