--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/tahiry
-spring.datasource.username=postgres
-spring.datasource.password=safidy
+spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:postgresql\://localhost\:5432/tahiry}
+spring.datasource.username=${JDBC_DATABASE_USERNAME\:postgres}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD\:safidy}
 spring.datasource.dbcp2.max-wait-millis=30000
 spring.datasource.dbcp2.validation-query=select 1
 spring.datasource.dbcp2.validation-query-timeout=30
@@ -15,4 +15,5 @@ error.handling.log-levels.5xx=ERROR
 error.handling.codes.OlonaAnaranaUnique=OLONA_ANARANA_UNIQUE
 error.handling.codes.OlonaFanampinyUnique=OLONA_FANAMPINY_UNIQUE
 error.handling.codes.PostePosteUnique=POSTE_POSTE_UNIQUE
+error.handling.codes.SazyCotiUnique=SAZY_COTI_UNIQUE
 springdoc.pathsToMatch=/api/**
