--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,27 @@
-spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:postgresql\://localhost\:5432/tahiry}
+#spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:postgresql\://localhost\:5432/tahiry}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME\:postgres}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD\:safidy}
+#spring.datasource.dbcp2.max-wait-millis=30000
+#spring.datasource.dbcp2.validation-query=select 1
+#spring.datasource.dbcp2.validation-query-timeout=30
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.id.new_generator_mappings=true
+#error.handling.http-status-in-json-response=true
+#error.handling.exception-logging=NO_LOGGING
+#error.handling.full-stacktrace-http-statuses=5xx
+#error.handling.log-levels.5xx=ERROR
+#error.handling.codes.OlonaAnaranaUnique=OLONA_ANARANA_UNIQUE
+#error.handling.codes.OlonaFanampinyUnique=OLONA_FANAMPINY_UNIQUE
+#error.handling.codes.PostePosteUnique=POSTE_POSTE_UNIQUE
+#error.handling.codes.SazyCotiUnique=SAZY_COTI_UNIQUE
+#springdoc.pathsToMatch=/api/**
+
+
+spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:postgresql\://roundhouse.proxy.rlwy.net\:37130/railway}
 spring.datasource.username=${JDBC_DATABASE_USERNAME\:postgres}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD\:safidy}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD\:QNNEwNGpsxwyAQGaxkTNNRPUMAYzeePU}
 spring.datasource.dbcp2.max-wait-millis=30000
 spring.datasource.dbcp2.validation-query=select 1
 spring.datasource.dbcp2.validation-query-timeout=30
@@ -17,3 +38,4 @@ error.handling.codes.OlonaFanampinyUnique=OLONA_FANAMPINY_UNIQUE
 error.handling.codes.PostePosteUnique=POSTE_POSTE_UNIQUE
 error.handling.codes.SazyCotiUnique=SAZY_COTI_UNIQUE
 springdoc.pathsToMatch=/api/**
+
